Closed Bug 349298 Opened 18 years ago Closed 18 years ago

"let" statement in "for" causes "Assertion failure: !let || tc->topStmt == tc->topScopeStmt"

Categories

(Core :: JavaScript Engine, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.8.1

People

(Reporter: jruderman, Assigned: mrbkap)

Details

(Keywords: crash, testcase, verified1.8.1, Whiteboard: [181approval pending])

Attachments

(1 file)

javascript:function() { for(i=0;i<4;++i) let x = 4; }

causes

Assertion failure: !let || tc->topStmt == tc->topScopeStmt, 
at mozilla/js/src/jsparse.c:3458
We don't really care what tc->topScopeStmt is...
Attachment #234598 - Flags: review?(brendan)
I meant tc->topStmt.
Assignee: general → mrbkap
OS: Mac OS X 10.4 → All
Priority: -- → P2
Hardware: Macintosh → All
Target Milestone: --- → mozilla1.8.1
Status: NEW → ASSIGNED
Comment on attachment 234598 [details] [diff] [review]
Fix bogo-assertion

This is debug only and can go into the 1.8 branch any time drivers want.  It's needed for 1.8.1/fx2.

/be
Attachment #234598 - Flags: review?(brendan)
Attachment #234598 - Flags: review+
Attachment #234598 - Flags: approval1.8.1?
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Checking in regress-349298.js;
/cvsroot/mozilla/js/tests/js1_7/block/regress-349298.js,v  <--  regress-349298.js
initial revision: 1.1
Flags: in-testsuite+
Whiteboard: [181approval pending]
verified fixed 1.9 20060821 windows/mac*/linux
Status: RESOLVED → VERIFIED
Comment on attachment 234598 [details] [diff] [review]
Fix bogo-assertion

a=schrep for drivers - approving all [181approval pending] bugs now that the tree is open.
Attachment #234598 - Flags: approval1.8.1? → approval1.8.1+
Fixed on the 1.8 branch.

/be
Keywords: fixed1.8.1
verified fixed 1.8 20060824 windows/mac*/linux
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: