tc->topStmt doesn't play into let declarations at all. bug 349298, r=brendan